# METAHackthon2026

./: .dockerignore  .gitignore  Dockerfile  README.md  __init__.py  client.py  conftest.py  inference.py  models.py  openenv.yaml  pyproject.toml
docs/: baseline_reproducibility.csv  colab_recipe.md  deck_outline.md  discord_submission.md  findings.md  hf_blog_draft.md  hf_space_push.md  medibill_pitch.md  medibill_pitch.pptx  medibill_pitch_v2.pptx  pitch_cuecard.md  pitch_v1.md  qa_flashcards.md  reward_calibration.md  round2-spec-v2.md  round2-spec-v3.md  round2-spec.md  round2-status-2026-04-20.md  video_recording_script.md  video_script_90s.md
medibill/: __init__.py  _gpu.py  baselines.py  client.py  colab_smoke.py  data_generator.py  demo_runner.py  evaluate_sft.py  generate_trajectories.py  models.py  parse_sft_log.py  preflight.py  prompting.py  sft_colab.py  tasks.py  test_exploits.py  train_sft.py  validate_grader.py
medibill/data/: __init__.py  icd10_pool.py  insurers.py  name_pool.py
medibill/ontology/: __init__.py  synth_proc_v1.json
medibill/server/: __init__.py  app.py  environment.py  grader.py
medibill/server/static/: demo.html  demo_trajectory.json
notebooks/: sft_quickstart.ipynb
scripts/: build_deck.applescript  build_deck.py  grader_anomaly_investigation.py  grader_calibration_audit.py  make_improvement_chart.py  make_loss_curve.py  record_demo_trajectory.py  regen_charts.py  reward_functions.py  run_baselines.py  run_colab_sft.sh  run_score_variance.py  sft_postprocess.py  smoke_test.py  train_grpo.py  train_grpo_medibill.py
server/: Dockerfile  __init__.py  app.py  data_generator.py  environment.py  grader.py  tasks.py  web_ui.py
submission_evidence/: docker_test.txt  grpo_validation.txt  openenv_validate.txt  pytest.txt  score_variance.txt  smoke_test.txt
tests/: __init__.py  _mock_openenv.py  conftest.py  test_action_handlers.py  test_anti_exploit.py  test_budget.py  test_data_generator.py  test_data_generator_extended.py  test_environment.py  test_escalation.py  test_grader.py  test_grader_extended.py  test_grader_invariance.py  test_hard_task_expansion.py  test_inference_contract.py  test_inference_extended.py  test_quality_analysis.py  test_reward_functions.py  test_robustness.py  test_tasks.py
traces/: eval.jsonl
