[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-medibill-env"
version = "0.1.0"
description = "MediBill-Env: an OpenEnv environment for cashless health-insurance claim reconciliation under IRDAI regulatory clock with silent policy-version drift."
requires-python = ">=3.10"
dependencies = [
    "openenv-core[core]>=0.2.2",
    "fastapi>=0.115.0",
    "pydantic>=2.0.0",
    "uvicorn>=0.24.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-cov>=4.0.0"]
train = ["trl>=0.16.0", "transformers>=5.2.0", "torch>=2.0.0", "accelerate>=0.30.0", "datasets>=2.0.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Load the openenv mock as an early plugin before package imports (Round 1 pattern)
addopts = "-p _mock_openenv"
pythonpath = ["tests"]

[project.scripts]
# OpenEnv CLI's validator expects this entry point to be named exactly "server".
server = "medibill.server.app:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["medibill*"]
exclude = ["tests*", "scripts*", "server*", "submission_evidence*", "docs*"]

[tool.setuptools.package-data]
"medibill.ontology" = ["*.json"]
