[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-medibill-env"
version = "0.1.0"
description = "MediBill-Env: an OpenEnv environment for cashless health-insurance claim reconciliation under IRDAI regulatory clock with silent policy-version drift."
requires-python = ">=3.10"
dependencies = [
    "openenv-core[core]>=0.2.2",
    "fastapi>=0.115.0",
    "pydantic>=2.0.0",
    "uvicorn>=0.24.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-cov>=4.0.0"]
train = [
    # We use Unsloth's train_on_responses_only helper for assistant-only loss
    # masking, which works across modern trl versions. We let Unsloth control
    # its trl/transformers/datasets transitive deps to avoid the resolver
    # conflicts that trl pins used to cause on Colab.
    "trl>=0.11.4",
    "transformers>=4.45.0",
    "torch>=2.0.0",
    "accelerate>=0.30.0",
    "datasets>=2.0.0",
]
# Pulls in the OpenAI Python client so `python inference.py` runs out of the
# box on a fresh checkout. Server image (Dockerfile) deliberately omits this
# to keep the deployed surface minimal.
inference = ["openai>=1.0.0"]

[tool.pytest.ini_options]
# Tests live alongside the package (e.g. medibill/test_exploits.py).
testpaths = ["medibill"]
python_files = ["test_*.py"]

[project.scripts]
# OpenEnv CLI's validator expects this entry point to be named exactly "server".
server = "medibill.server.app:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["medibill*"]
exclude = ["tests*", "scripts*", "server*", "submission_evidence*", "docs*"]

[tool.setuptools.package-data]
"medibill.ontology" = ["*.json"]
